test/runnable/extra-files/link14828a.d
module link14828a;

void func1()
{
    import link14828stdio;

    writeln("ok1");
}
