test/fail_compilation/fail136.d
void main()
{
    x"EF BB BF";
}

